Update to database, admin pages and external pages

--- a/Admin/Pages/Competencies/Index.cshtml
+++ b/Admin/Pages/Competencies/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Admin.Pages.Competencies.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Competencies";
 }
 
 
@@ -10,57 +10,52 @@
         <div class="col-sm py-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Certificates</h5>
+                    <h5 class="card-title">Add a new Competency</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="./Certificates" class="btn btn-primary">Edit</a>
+                    <a href="Competencies/Create" class="btn btn-primary">Create</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Competencies</h5>
+                    <h5 class="card-title">Knowledge</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="./Competencies" class="btn btn-primary">Edit</a>
+                    <a href="Competencies/Knowledge/Index" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Positions</h5>
+                    <h5 class="card-title">Technical</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="./Positions" class="btn btn-primary">Edit</a>
+                    <a href="Competencies/Technical" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Behavioural</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="Competencies/Behavioural" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Executive</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="Competencies/Executive" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
-            <div class="card" style="width: 20rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div style="width: 20rem;">
+                
             </div>
         </div>
-
     </div>
 </div>
