Updating the Database 2 new positions and updating pages

--- a/Admin/Pages/Competencies/Index.cshtml
+++ b/Admin/Pages/Competencies/Index.cshtml
@@ -11,8 +11,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Add a new Competency</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="Competencies/Create" class="btn btn-primary">Create</a>
+                    <p class="card-text">Click here to add a new competency and levels</p>
+                    <a href="./Competencies/Create" class="btn btn-primary">Create</a>
                 </div>
             </div>
         </div>
@@ -20,8 +20,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Knowledge</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="Competencies/Knowledge/Index" class="btn btn-primary">Edit</a>
+                    <p class="card-text">Click here to add, edit or delete a Knowledge Element and it's levels</p>
+                    <a href="./Competencies/Knowledge/Index" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -29,8 +29,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Technical</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="Competencies/Technical" class="btn btn-primary">Edit</a>
+                    <p class="card-text">Click here to add, edit or delete a Technical Element and it's levels</p>
+                    <a href="./Competencies/Technical" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -38,8 +38,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Behavioural</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="Competencies/Behavioural" class="btn btn-primary">Edit</a>
+                    <p class="card-text">Click here to add, edit or delete a Behavioural Element and it's levels</p>
+                    <a href="./Competencies/Behavioural" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -47,8 +47,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Executive</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="Competencies/Executive" class="btn btn-primary">Edit</a>
+                    <p class="card-text">Click here to add, edit or delete an Executive Element and it's levels</p>
+                    <a href="./Competencies/Executive" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
