--- a/Admin/Pages/Competencies/Create.cshtml
+++ b/Admin/Pages/Competencies/Create.cshtml
@@ -7,18 +7,19 @@
 <h1>Create a new Competency</h1>
 
 <hr />
-<div class="row">
-    <div class="col-md-10">
+
+    <div class="col-md-12">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <h3 style="margin-bottom:15px;">Choose a competency to add</h3>
             <div class="form-group">
-                <input type="radio" id="knowledge" name="competency" value="1">
+                <input type="radio" id="knowledge" name="CompetencyType" value="1">
                 <label class="h5 mr-md-3" for="knowledge">Knowledge</label>
-                <input type="radio" id="technical" name="competency" value="2">
+                <input type="radio" id="technical" name="CompetencyType" value="2">
                 <label class="h5 mr-md-3" for="technical">Technical</label>
-                <input type="radio" id="behavioural" name="competency" value="3">
+                <input type="radio" id="behavioural" name="CompetencyType" value="3">
                 <label class="h5 mr-md-3" for="behavioural">Behavioural</label>
-                <input type="radio" id="executive" name="competency" value="4">
+                <input type="radio" id="executive" name="CompetencyType" value="4">
                 <label class="h5 mr-md-3" for="executive">Executive</label>
             </div>
             <div class="form-group">
@@ -33,20 +34,81 @@
             </div>
             <div class="form-group">
                 <label asp-for="Competency.DescEng" class="control-label"><b>Description English</b></label>
-                <textarea asp-for="Competency.DescEng" class="form-control" rows="6" cols="50"></textarea>
+                <textarea asp-for="Competency.DescEng" class="form-control" rows="5" cols="50"></textarea>
                 <span asp-validation-for="Competency.DescEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Competency.DescFre" class="control-label"><b>Description French</b></label>
-                <textarea asp-for="Competency.DescFre" class="form-control" rows="6" cols="50"></textarea>
+                <textarea asp-for="Competency.DescFre" class="form-control" rows="5" cols="50"></textarea>
                 <span asp-validation-for="Competency.DescFre" class="text-danger"></span>
+            </div>
+            <h3 style="margin-bottom:15px;">Add a description for each Level</h3>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 1 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 1 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 2 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 2 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 3 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 3 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 4 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 4 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 5 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 5 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45"></textarea>
+                    <span class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
+
 
 <div>
     <a asp-page="Index">Back to List</a>
