--- a/Admin/Pages/Competencies/Knowledge/Edit.cshtml
+++ b/Admin/Pages/Competencies/Knowledge/Edit.cshtml
@@ -33,6 +33,66 @@
                 <textarea asp-for="Competency.DescFre" class="form-control" rows="6" cols="50"></textarea>
                 <span asp-validation-for="Competency.DescFre" class="text-danger"></span>
             </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 1 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Basic understanding of the CCG and its role as a program facilitator.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 1 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Compréhension de base de la GCC et de son rôle en tant que facilitateur de programmes.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 2 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Understands the duties of the CCG and the roles and responsibilities of key contacts in the CCG’s regional organization. Has a good understanding of certain programs and assets.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 2 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Comprend les fonctions de la GCC ainsi que les rôles et les responsabilités des principales personnes ressources de l'organisation régionale de la GCC. A une bonne compréhension de certains programmes et actifs.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 3 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Good understanding of programs within a regional or national organizational framework. Understands most programs and associated assets. Identifies contacts for other programs. Understands partners’ roles and responsibilities.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 3 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Bonne compréhension des programmes  dans un cadre organisationnel régional ou national. Comprend la plupart des programmes et des actifs associés. Identifie les personnes ressources pour d'autres programmes. Comprend les rôles et les responsabilités des partenaires.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 4 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Advanced knowledge of programs and their impact on relations with the public and partners regionally and/or nationally. Extensive knowledge of all CCG programs, as well as regional and national capacity and asset condition. Participates in program planning.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 4 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Connaissance avancée des programmes et de leurs impacts sur les relations avec le public et les partenaires, au niveau régional et / ou national. Connaissance approfondie de tous les programmes de la GCC, ainsi que de la capacité et de l'état des actifs au niveau régional et national. Participe à la planification des programmes.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 5 - English</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Extensive knowledge of all CCG programs, their delivery methods and timelines both regionally and nationally. Assesses stakeholder expectations and needs for the CCG and other departments in planning and exercises. Establishes internal and external relationships. Suggests potential improvements, changes or opportunities for program expansion.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label"><b>Level 5 - French</b></label>
+                    <textarea class="form-control" rows="3" cols="45">Connaissance approfondie de tous les programmes de la GCC, de leurs modes de livraison et de leurs échéanciers aux niveaux régional et national. Évalue les attentes et les besoins des intervenants pour la GCC et les autres ministères dans la planification et les exercices. Établit des relations à l'interne et à l'externe. Suggère des améliorations potentielles, des changements ou des opportunités d'expansion des programmes.</textarea>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
