--- a/Admin/Pages/Competencies/Knowledge/Index.cshtml
+++ b/Admin/Pages/Competencies/Knowledge/Index.cshtml
@@ -36,9 +36,9 @@
                     @Html.DisplayFor(modelItem => item.DescFre)
                 </td>
                 <td>
+                    <a asp-page="/Competencies/Create" asp-route-id="@item.Id">Create</a>
                     <a asp-page="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-page="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-page="Details" asp-route-id="@item.Id">Details</a>
                 </td>
             </tr>
         }
