--- a/Web/Pages/Student/College/Electronics.cshtml
+++ b/Web/Pages/Student/College/Electronics.cshtml
@@ -79,7 +79,7 @@
                     }
             <tr>
                 <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a href=@pdapUrl>@pdapText</a></td>
+                <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a target="_blank" href=@pdapUrl>@pdapText</a></td>
                 <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
             </tr>
                 }
