--- a/Web/Pages/CCGMember/CurrentLevel.cshtml
+++ b/Web/Pages/CCGMember/CurrentLevel.cshtml
@@ -21,7 +21,7 @@
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
             @foreach (var level in Model.JobGroupPositions.Select(e => e.LevelValue).ToList().Distinct())
             {
-                var routedata = new Dictionary<string, string>
+                var routedata = new Dictionary<string, int>
                         {
                               { "id",  Model.Id.ToString()},
                               { "level",  level}
