Mockup for the Admin section

--- a/Admin/Pages/Certificates/Create.cshtml
+++ b/Admin/Pages/Certificates/Create.cshtml
@@ -15,12 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Certificate.NameEng" class="control-label"></label>
-                <input asp-for="Certificate.NameEng" class="form-control" />
+                <input asp-for="Certificate.NameEng" class="form-control" required />
                 <span asp-validation-for="Certificate.NameEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Certificate.NameFre" class="control-label"></label>
-                <input asp-for="Certificate.NameFre" class="form-control" />
+                <input asp-for="Certificate.NameFre" class="form-control" required />
                 <span asp-validation-for="Certificate.NameFre" class="text-danger"></span>
             </div>
             <div class="form-group">
