--- a/Admin/Pages/Competencies/Index.cshtml
+++ b/Admin/Pages/Competencies/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Add a new Competency</h5>
-                    <p class="card-text">Click here to add a new competency and levels</p>
+                    <p class="card-text">Click here to create a new competency and levels</p>
                     <a href="./Competencies/Create" class="btn btn-primary">Create</a>
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Knowledge</h5>
-                    <p class="card-text">Click here to add, edit or delete a Knowledge Element and it's levels</p>
+                    <p class="card-text">Click here to create, edit or delete a Knowledge Element and it's levels</p>
                     <a href="./Competencies/Knowledge/Index" class="btn btn-primary">Next</a>
                 </div>
             </div>
@@ -29,7 +29,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Technical</h5>
-                    <p class="card-text">Click here to add, edit or delete a Technical Element and it's levels</p>
+                    <p class="card-text">Click here to create, edit or delete a Technical Element and it's levels</p>
                     <a href="./Competencies/Technical" class="btn btn-primary">Next</a>
                 </div>
             </div>
@@ -38,7 +38,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Behavioural</h5>
-                    <p class="card-text">Click here to add, edit or delete a Behavioural Element and it's levels</p>
+                    <p class="card-text">Click here to create, edit or delete a Behavioural Element and it's levels</p>
                     <a href="./Competencies/Behavioural" class="btn btn-primary">Next</a>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Executive</h5>
-                    <p class="card-text">Click here to add, edit or delete an Executive Element and it's levels</p>
+                    <p class="card-text">Click here to create, edit or delete an Executive Element and it's levels</p>
                     <a href="./Competencies/Executive" class="btn btn-primary">Next</a>
                 </div>
             </div>
