--- a/Admin/Pages/Certificates/Edit.cshtml
+++ b/Admin/Pages/Certificates/Edit.cshtml
@@ -16,12 +16,12 @@
             <input type="hidden" asp-for="Certificate.Id" />
             <div class="form-group">
                 <label asp-for="Certificate.NameEng" class="control-label"></label>
-                <input asp-for="Certificate.NameEng" class="form-control" />
+                <input asp-for="Certificate.NameEng" class="form-control" required/>
                 <span asp-validation-for="Certificate.NameEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Certificate.NameFre" class="control-label"></label>
-                <input asp-for="Certificate.NameFre" class="form-control" />
+                <input asp-for="Certificate.NameFre" class="form-control" required/>
                 <span asp-validation-for="Certificate.NameFre" class="text-danger"></span>
             </div>
             <div class="form-group">
