--- a/Admin/Pages/Competencies/Create.cshtml
+++ b/Admin/Pages/Competencies/Create.cshtml
@@ -24,12 +24,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Competency.NameEng" class="control-label"><b>Name English</b></label>
-                <input asp-for="Competency.NameEng" class="form-control" />
+                <input asp-for="Competency.NameEng" class="form-control" required/>
                 <span asp-validation-for="Competency.NameEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Competency.NameFre" class="control-label"><b>Name French</b></label>
-                <input asp-for="Competency.NameFre" class="form-control" />
+                <input asp-for="Competency.NameFre" class="form-control" required />
                 <span asp-validation-for="Competency.NameFre" class="text-danger"></span>
             </div>
             <div class="form-group">
