--- a/Admin/Pages/Competencies/Edit.cshtml
+++ b/Admin/Pages/Competencies/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Admin.Pages.Competencies.Knowledge.EditModel
+@model Admin.Pages.Competencies.EditModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -107,4 +107,3 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
