--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -121,6 +121,8 @@
                            {
                               { "id",  Model.Id.ToString()},
                               { "level",  Model.Level},
+                              { "levelcode", Model.LevelCode },
+                              { "subgroupcode", Model.SubGroupCode },
                               {"positionid", Model.PositionId.ToString()}
                             };
                       }
