--- a/Admin/Pages/Competencies/Index.cshtml
+++ b/Admin/Pages/Competencies/Index.cshtml
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Knowledge</h5>
                     <p class="card-text">Click here to create, edit or delete a Knowledge Element and it's levels</p>
-                    <a href="./Competencies/Knowledge/Index" class="btn btn-primary">Next</a>
+                    <a asp-page="List" asp-route-typeid="1" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Technical</h5>
                     <p class="card-text">Click here to create, edit or delete a Technical Element and it's levels</p>
-                    <a href="./Competencies/Technical" class="btn btn-primary">Next</a>
+                    <a asp-page="List" asp-route-typeid="2" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Behavioural</h5>
                     <p class="card-text">Click here to create, edit or delete a Behavioural Element and it's levels</p>
-                    <a href="./Competencies/Behavioural" class="btn btn-primary">Next</a>
+                    <a asp-page="List" asp-route-typeid="3" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
@@ -48,13 +48,13 @@
                 <div class="card-body">
                     <h5 class="card-title">Executive</h5>
                     <p class="card-text">Click here to create, edit or delete an Executive Element and it's levels</p>
-                    <a href="./Competencies/Executive" class="btn btn-primary">Next</a>
+                    <a asp-page="List" asp-route-typeid="4" class="btn btn-primary">Next</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
             <div style="width: 20rem;">
-                
+
             </div>
         </div>
     </div>
