--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -30,11 +30,11 @@
     <div class="col-sm-3 mrgn-bttm-md">
         <label><b>@Localizer["Level"]</b></label><br />
         <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
-            @Model.JobGroup.Code @Model.LevelObj &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            @Model.LevelCodeObj &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            @foreach (var level in Model.JobGroupLevels.Select(e => e.LevelValue).ToList().Distinct())
+            @foreach (var level in Model.JobGroupLevels.ToList().Distinct())
             {
                 var data = new Dictionary<string, string>
                  {
@@ -44,11 +44,13 @@
                      {"previouspagedetails", Model.PreviousPageDetails },
                      {"level", Model.Level.ToString() },
                      {"previouspagecompare", Model.PreviousPageCompare },
-                     {"levelobj",  level.ToString() }
+                     {"levelobj",  level.LevelValue.ToString() },
+                     {"levelcodeobj", level.LevelCode },
+                     {"subgroupcodeobj", level.SubGroupCode }
                   };
                 <li role="presentation">
                     <a role="menuitem" tabindex="-1"
-                       asp-page="ObjectivePosition" asp-all-route-data="data">@Localizer["Level"] @level</a>
+                       asp-page="ObjectivePosition" asp-all-route-data="data">@Localizer["Level"] @level.LevelCode</a>
                 </li>
             }
         </ul>
@@ -72,7 +74,9 @@
                         {"previouspagedetails", Model.PreviousPageDetails },
                         {"previouspagecompare", Model.PreviousPageCompare },
                         {"positionid",  Model.PositionId.ToString()},
-                        {"objectiveid",  jp.JobTitleId.ToString()}
+                        {"objectiveid",  jp.JobTitleId.ToString()},
+                        {"levelcodeobj", Model.LevelCodeObj },
+                        {"subgroupcodeobj", Model.SubGroupCodeObj }
                      };
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="ObjectivePosition" asp-all-route-data="data">@(isEnglish ? jp.JobTitleEng : jp.JobTitleFre)</a></li>
             }
@@ -91,6 +95,8 @@
         {"previouspage", Model.PreviousPage },
         {"previouspagedetails", Model.PreviousPageDetails },
         {"previouspagecompare", Model.PreviousPageCompare },
+        {"levelcodeobj", Model.LevelCodeObj },
+        {"subgroupcodeobj", Model.SubGroupCodeObj }
         };
         }
     </div>
