--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -230,7 +230,7 @@
                 }
 
                 <div class="col-md-6">
-                    <button class="btn btn-primary pull-left" asp-page-handler="edit" asp-all-route-data="@paramdataprevious">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Add Element"]&nbsp;&nbsp;&nbsp;&nbsp;</button>
+                    <button class="btn btn-primary pull-left" asp-page-handler="edit" asp-all-route-data="@paramdataprevious">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Add Competency"]&nbsp;&nbsp;&nbsp;&nbsp;</button>
                 </div>
                 <div class="col-md-6">
                     <button class="btn btn-primary pull-right">@Localizer["Search Positions"]</button>
