CREATE form updates/Admin

--- a/Admin/Pages/Positions/Details.cshtml
+++ b/Admin/Pages/Positions/Details.cshtml
@@ -13,8 +13,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    Administrative Services (AS&CR) Level 01 / Services administratif (AS&CR) Niveau  01
-                    @Model.Position.JobGroupTitleEng (@Model.Position.JobGroupCode) Level @Model.Position.JobGroupLevelValue / @Model.Position.JobGroupTitleFre (@Model.Position.JobGroupCode) Level @Model.Position.JobGroupLevelValue
+                    @Model.Position.JobGroupTitleEng (@Model.Position.JobGroupCode) Level @Model.Position.JobGroupLevelValue / @Model.Position.JobGroupTitleFre (@Model.Position.JobGroupCode) Niveau @Model.Position.JobGroupLevelValue
                 </td>
             </tr>
             <tr>
