Added FAQs EN & FR

--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -11,6 +11,7 @@
                     <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
                     <li><a href="/en/Candidate/Index">External Candidate</a></li>
                     <li><a href="/en/Student/Index">Student</a></li>
+                    <li><a href="/en/Faqs">FAQs</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" target="_blank" class="item">Contactez-nous</a>
                 </ul>
             </div>
@@ -28,6 +29,7 @@ else
                     <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
                     <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
                     <li><a href="/fr/Student/Index">Étudiant</a></li>
+                    <li><a href="/fr/Faqs">FAQs</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" target="_blank" class="item">Contactez-nous</a>
                 </ul>
             </div>
