--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -45,6 +45,10 @@
             <script src="~/themes-dist-4.0.25-theme-gcwu-fegc/wet-boew/js/ie8-wet-boew.min.js"></script>
             <![endif]-->
     <noscript><link rel="stylesheet" href="~/themes-dist-4.0.25-theme-gcwu-fegc/wet-boew/css/noscript.min.css" /></noscript>
+    <script>
+        document.write(wet.builder.refTop({
+        }));
+    </script>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
     <ul id="wb-tphp">
