--- a/Admin/Pages/Competencies/Edit.cshtml
+++ b/Admin/Pages/Competencies/Edit.cshtml
@@ -13,6 +13,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Competency.Id" />
+            <input type="hidden" asp-for="Competency.TypeId" />
             <div class="form-group">
                 <label asp-for="Competency.NameEng" class="control-label"><b>Name English</b></label>
                 <input asp-for="Competency.NameEng" class="form-control" />
