parameter name update

--- a/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
+++ b/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
@@ -8,7 +8,7 @@
     var paramdata = new Dictionary<string, string>
                             {
                                  {"previouspagesimilar", "../../Candidate/Shoreside/SimilarDetails" },
-                                 {"id", Model.Id.ToString() },
+                                 {"idobj", Model.Id.ToString() },
                                  {"positionid", Model.PositionId.ToString()},
                                  {"previouspage",Model.PreviousPage }
                             };
@@ -34,7 +34,7 @@
                           { "positionid",  Model.PositionId.ToString()},
                            {"previouspagecompare", "../../Candidate/Shoreside/Compare/AllObjective" },
                            {"previouspage", Model.PreviousPage},
-                          { "id",  jobgroup.Id.ToString()}
+                          { "idobj",  jobgroup.Id.ToString()}
                          };
                         <a asp-page="../../../CCGMember/Compare/ObjectiveLevel" asp-all-route-data="routedata">
                             <div class="col-sm-4 mrgn-bttm-md">
